# qmath

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
notebooks/: adders_re.ipynb  compiler_demo.ipynb  sin_approx.ipynb  timing.ipynb
notebooks/accuracy/: cos_fbe.ipynb  log_fbe.ipynb  sin.ipynb
notebooks/bugs/: cnot_re.ipynb
notebooks/classic/: cos_qfbe.ipynb  log2_qfbe.ipynb  pow_qfbe.ipynb
notebooks/re/: fit_2params_example.ipynb  re_fit_example.ipynb  symbolic_re.ipynb  symbolic_re_example.ipynb
qmath/: utils.py
qmath/add/: __init__.py  adders_re_test.py  adders_test.py  cdkm2004.py  increment.py  increment_test.py  re_test.py  subtract.py  subtract_test.py  ttk2009.py
qmath/benchmarks/: benchmarks.csv  benchmarks_test.py
qmath/compile/: __init__.py  evaluate.py  evaluate_test.py
qmath/div/: dividers_re_test.py  dividers_test.py  tmvh2019.py
qmath/func/: __init__.py  bits.py  common.py  common_re_test.py  common_test.py  compare.py  compare_re_test.py  fbe.py  fbe_re_test.py  fbe_test.py  inv_sqrt.py  inv_sqrt_re_test.py  inv_sqrt_test.py  sqrt.py  sqrt_re_test.py  sqrt_test.py  square.py  square_re_test.py  square_test.py
qmath/mult/: __init__.py  cg2019.py  jhaa2016.py  mct2017.py  multiplier.py  multipliers_re_test.py  multipliers_test.py  square.py  square_test.py
qmath/poly/: __init__.py  horner.py  horner_re_test.py  horner_test.py  piecewise.py  piecewise_re_test.py  piecewise_test.py
qmath/utils/: gates.py  lookup.py  lookup_test.py  math.py  perm.py  perm_test.py  re_utils.py  (+3 more)
(+16 files in other folders)
