[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "qmath"
version = "0.1.0"
description = "Library of mathematical functions for quantum computers"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = " Dmytro Fedoriaka, Thiri Yamin Hsu and Sanskriti Joshi" }]

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
]

# https://peps.python.org/pep-0508/
dependencies = [
    "numpy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit>=3.0.0",
    "black==26.1.0",
    "py-spy",
]

[tool.setuptools]
packages = ["qmath"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::FutureWarning"  # To ignore UnstableWarnings.
]
markers = [
    "smoke: smoke tests (quick checks for basic functionality)",
    "slow: slow tests (>1s to run)",
    "re: resource estimation tests",
]